app/assets/stylesheets/zammad.scss
/* ... */
.btn {
  display: inline-block;
  font-size: 14px;
  padding: 10px 24px 9px;
  color: hsl(202,68%,54%);
  background: white;
  border: 1px solid rgba(0,0,0,.1);
  outline: none !important;
  touch-action: manipulation;
  user-select: none;
  cursor: pointer;
  border-radius: 4px;
  text-align: center;
  white-space: nowrap;
  vertical-align: middle;
  
  .icon {
    vertical-align: middle;
    margin-top: -3px;
  }
  
  &:focus {
    box-shadow: 0 0 0 3px hsl(201,62%,90%);
  }
  
  &.btn--slim {
    padding-left: 12px;
    padding-right: 12px;
  }

  &.btn--table {
    padding: 4px 9px;
    font-weight: 300;
    border: none;
    margin: 5px 6px 0;
    vertical-align: baseline; /* calendar_subscriptions.jst.eco */
    
    .icon {
      vertical-align: middle;
      margin-right: 5px;
    }
  }

  &.is-disabled,
  &[disabled] {
    pointer-events: none;
    cursor: not-allowed;
    opacity: .33;
  }

  &:active {
    box-shadow: none;
    background: hsl(0,0%,98%);
  }

  &.btn--action {
    text-transform: uppercase;
    color: hsl(0,0%,60%);
    font-size: 12px;
    letter-spacing: 0.05em;
    height: 31px;
    padding: 6px 11px !important;
    display: inline-flex;
    align-items: center;
    
    .icon {
      margin: -2px 5px 0 -2px;
      fill: hsl(0,0%,60%);
    }
    
    &.btn--slim {
      padding-left: 7px !important;
      padding-right: 7px !important;
    }
  }

  // used in .recipientList-controls
  &.btn--onDark {
    background: none;
    color: white;
    
    svg {
      fill: currentColor;
      opacity: 1;
    }
  }

  &.btn--primary {
    color: white;
    background: hsl(203,65%,55%);
    &:active {
      background: hsl(203,65%,45%);
    }
  }

  &.btn--positive,
  &.btn--success {
    color: white;
    background: hsl(145,51%,45%);
    &:active {
      background: hsl(145,51%,35%);
    }

    &.btn--secondary {
      background: white;
      color: hsl(145,51%,45%);
      
      &:active {
        background: hsl(0,0%,98%);
      }
    }
  }

  &.btn--danger {
    color: white;
    background: hsl(0,65%,55%);
    &:active {
      background: hsl(0,65%,45%);
    }

    &.btn--secondary {
      background: white;
      color: hsl(0,65%,55%);
      
      &:active {
        background: hsl(0,0%,98%);
      }
    }
  }

  &.btn--text {
    font-size: inherit;
    padding: 0;
    color: hsl(203,65%,55%);
    border: none;
    background: none;
    vertical-align: baseline;
    text-align: left;
    
    &:active {
      color: hsl(203,65%,40%);
    }

    &.btn--secondary {
      color: hsl(0,0%,68%);
      text-decoration: underline;
      
      &:active {
        color: hsl(0,0%,53%);
      }
    }

    &.btn--positive {
      color: hsl(145,51%,45%);
      
      &:active {
        color: hsl(145,51%,30%);
        background: none;
      }
    }

    &.btn--danger {
      color: hsl(0,65%,55%);
      
      &:active {
        color: hsl(0,65%,40%);
        background: none;
      }
    }

    &.btn--subtle {
      text-decoration: underline;
      color: hsl(0,0%,85%);
      
      &:active {
        color: hsl(0,0%,75%);
      }
    }
  }

  &.btn--split--first {
    border-radius: 3px 0 0 3px;
  }
  &.btn--split,
  &.btn--split--last {
    border-radius: 0;
    border-left: none;
    margin-left: 0 !important;
  }
  &.btn--split--last {
    border-radius: 0 3px 3px 0;
  }

  &.btn--dropdown {
    position: relative;
    
    select {
      opacity: 0;
      width: 100%;
      height: 100%;
      left: 0;
      top: 0;
      position: absolute;
      cursor: pointer;
    }
  }
}

.btn + .btn {
  margin-left: 10px;
}

.btn + .btn.align-right {
  margin-left: auto;
}

.btn.align-right ~ .btn {
  margin-left: 15px;
}

.vertical > .btn + .btn {
  margin-left: 0;
  margin-top: 10px;
}

.btn--download .icon-download {
  margin-right: 6px;
  margin-top: 4px;
  margin-left: -10px;
  vertical-align: top;
  fill: white;
}

.btn-label {
  margin-left: 7px;
}

.visibility-change {
  /*
  
  Interactive Visibility Change Classes:
  
    <div class="visibility-change">
      <svg class="icon-marker" data-visible="active"><use xlink:href="#icon-marker" /></svg>
    </div>
    
    Important: HTML Order active > hover > normal

  */

  [data-visible=active],
  [data-visible=hover] {
    display: none;
  }

  &.is-active [data-visible=active] {
    display: block;
    
    & ~ [data-visible=normal] {
      display: none
    }
  }

  &:hover [data-visible=hover] {
    display: block;
    
    & ~ [data-visible=normal] {
      display: none
    }
  }
}

table {
  table-layout: fixed;
}

.table {
  display: table;
}

.table-fluid {
  table-layout: auto;
}

.table .table-row {
  display: table-row;
}

.table th:not(.noTruncate),
.table td:not(.noTruncate) {
  @extend .u-textTruncate;
}

.table > thead > tr > th {
  padding: 12px 9px 10px;
  border-bottom: none;
  border-top: 1px solid #ececec;
  background: #f0f1f2;
  color: #444a4f;
  font-weight: normal;
  font-size: 12px;
  text-transform: uppercase;
  letter-spacing: 0.05em;
}

.table > tbody > tr > td {
  padding: 11px 10px 7px;
  border: none;
  box-shadow: 0 1px rgba(0,0,0,.03);
}

.table-hover > tbody > tr:hover > td {
  background: white;
  box-shadow: 
    0 1px rgba(0,0,0,.03),
    0 -1px rgba(0,0,0,.03);
}
 
.table-hover > tbody > tr:hover > th {
  background: rgba(0,8,14,.015);
}

.table > thead:first-child > tr:first-child > th.no-padding,
.table > thead > tr > th.no-padding,
.table > tbody > tr > td.no-padding {
  padding: 0;
}

.table tr.is-inactive {
  opacity: 0.5;
  text-decoration: line-through;
  
  a {
    color: #bbb;
  }
}

.table .icon-trash {
  vertical-align: middle;
  fill: hsl(240,1%,77%);
}

.table .table-sort-arrow {
  opacity: 1;
  fill: hsl(206,7%,33%);
  width: 8px;
  height: 8px;
  margin-left: 3px;
  margin-top: -2px;
  vertical-align: middle;
}
/* ... */

